fixed page layout on mobile devices

--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -540,7 +540,7 @@ $lightGreen: #b9e7e7;
       width:97%;
       .navbar-expanded,.navbar{
         .container{     
-          position:fixed;
+          position:absolute;
           flex-direction: column;
           left:2%;
           top:3px;
